# tingyun-cli

./: .gitignore  AGENT.md  README.md  config.example.json  pyproject.toml
catalog/: tingyun-apm-api.catalog.json  tingyun-apm-api.catalog.schema.json
docs/: action-contract.md  agent-output-contract.md  application-context.md  architecture.md  artifacts-and-redaction.md  artifacts.md  catalog-coverage-report.md  catalog-spec.md  cli-contract.md  design-decisions.md  evidence-composition.md  evidence-schema-depth.md  investigation-depth-architecture.md  investigation-depth-design-decisions.md  investigation-guide.md  investigation-manifest.md  live-testing-company-machine.md  live-testing-investigation-depth.md  live-testing-on-company-machine.md  live-testing.md  migration-compatibility.md  non-goals.md  output-contract.md  protocol-promotion-matrix.md  report-readiness-contract.md  research-maintenance.md  roadmap.md  runtime-surface.md  safety-policy.md  safety.md  sanitized-export.md  snapshot-profiles.md  system-model.md  testing.md  trace-sample-assessment.md
schemas/: investigation-manifest.schema.json  research-diff.schema.json  research-view.schema.json  system-model-diff.schema.json  system-model-manifest.schema.json  system-model-snapshot.schema.json  system-model-validation.schema.json
scripts/: generate_catalog.py
tests/: test_action_contracts.py  test_auth_and_redaction.py  test_auth_redaction.py  test_branch_integration.py  test_candidates.py  test_capture_2026_07_15_contracts.py  test_catalog_cli.py  test_catalog_offline.py  test_cli.py  (+21 more)
(+121 files in other folders)
