[project]
name = "ty-apm-cli"
version = "0.1.0"
description = "Agent-safe read-only Tingyun APM API evidence CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
ty-apm = "ty_apm_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
